--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,243 @@
   padding: 0;
   margin: 0;
 }
+div {
+    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
+.content {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.header {
+    padding: 24px 14px;
+    background-color: #444;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 500;
+}
+.desktop .tab {
+    width: 316px;
+    padding: 24px;
+    box-sizing: border-box;
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.05);
+}
+.country {
+    z-index: 201;
+    background-color: white;
+}
+.map {
+    height: 100%; 
+    width: 100%; 
+    overflow: hidden;
+}
+.pageName {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 25px;
+    line-height: 24px;
+}
+
+.desktop .infoTile {
+    width: 268px;
+}
+.infoTile .title {
+    color: #767676;
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+.infoTile .confirmed {
+    font-size: 38px;
+    color: #DE3700;
+    font-weight: bold;
+    line-height: 40px;
+}
+.country .legend {
+    padding-top: 12px;
+}
+.legend {
+    display: grid;
+    padding: 20px 0;
+    grid-template-columns: 8px auto min-content;
+    align-items: center;
+    grid-gap: 16px 8px;
+    font-size: 13px;
+    line-height: 20px;
+}
+.legend .total {
+    color: #767676;
+    text-align: right;
+}
+.legend .color {
+    width: 8px;
+    height: 8px;
+    border-radius: 8px;
+}
+.areas {
+    padding-top: 24px;
+    width: 100%;
+    height: calc(100% - 260px);
+    overflow: hidden;
+}
+.area {
+    display: grid;
+    background: #FFF;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
+    font-size: 13px;
+    line-height: 20px;
+    padding: 10px 16px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    user-select: none;
+    grid-template-columns: auto min-content;
+    grid-column-gap: 5px;
+}
+.area .areaName {
+    font-weight: 600;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.area .areaTotal {
+    color: #767676;
+}
+.area:hover, .area.expanded {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+}
+.area.selected, .area.selected .areaTotal, .area.selected .areaName {
+    color: white;
+}
+.area.selected {
+    background: radial-gradient(50% 351.19% at 50% 50%, rgba(0, 128, 157, 0.56) 0%, rgba(0, 128, 157, 0.7) 100%), #FFFFFF;
+}
+.w-full {
+    width: 100%;
+}
+.flex {
+    display: -webkit-box;
+    display: flex;
+}
+.flex-row {
+    -webkit-box-orient: horizontal;
+    flex-direction: row;
+}
+.justify-center {
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+.w-1\/3 {
+    width: 33.333333%;
+}
+.text-yellow-600 {
+     color: #eeb34e;
+}
+.text-green-600 {
+    color: #38a169;
+}
+.text-gray-600 {
+    color: #718096;
+}
+.text-center {
+    text-align: center;
+}
+.shadow {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+.overflow-hidden {
+    overflow: hidden;
+}
+.flex-col {
+    -webkit-box-orient: vertical;
+    flex-direction: column;
+}
+.flex-col, .flex-row {
+    -webkit-box-direction: normal;
+}
+.flex {
+    display: -webkit-box;
+    display: flex;
+}
+.rounded {
+    border-radius: .25rem;
+}
+.mx-2 {
+    margin-left: .5rem;
+    margin-right: .5rem;
+}
+.text-xl {
+    font-size: 1.25rem;
+}
+.pt-2 {
+    padding-top: .5rem;
+}
+.h-16 {
+    height: 4rem;
+}
+.font-bold {
+    font-weight: 700;
+}
+.font-sans {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+}
+.flex-auto {
+    -webkit-box-flex: 1;
+    flex: 1 1 auto;
+}
+.bg-yellow-100 {
+    background-color: #FEF8E0;
+}
+.bg-yellow-200 {
+    background-color: #FDEFC1;
+}
+.bg-green-100 {
+    background-color: #f0fff4;
+}
+.bg-green-200 {
+    background-color: #c6f6d5;
+}
+.bg-gray-200 {
+    background-color: #edf2f7;
+}
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.text-sm {
+    font-size: .875rem;
+}
+.py-1 {
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+}
+.font-semibold {
+    font-weight: 600;
+}
+.items-center {
+    -webkit-box-align: center;
+    align-items: center;
+}
+.graph {
+    padding-bottom: 12px;
+    border-bottom: #DDD 1px solid;
+}
+.graph .title {
+    color: #767676;
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+#doughnut {
+    margin-bottom: 12px;
+}
+.graph .title{
+    padding-top: 12px;
+    border-top: #DDD 1px solid;
+}
