--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,9 @@ div {
   width: 100%;
   position: absolute;
 }
-.header {
-  padding: 24px 14px;
-  background-color: #444;
+.desktop{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  z-index: 500;
 }
 .desktop .tab {
   width: 316px;
@@ -34,10 +30,16 @@ div {
 }
 
 .pageName {
-  font-size: 20px;
+  display: flex;
+  font-size: 18px;
   font-weight: 600;
-  margin-bottom: 25px;
   line-height: 24px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  white-space: pre;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: #ddd 1px solid;
 }
 
 .desktop .infoTile {
@@ -78,7 +80,7 @@ div {
     brightness(139%) contrast(115%);
 }
 .infoTile .confirmed {
-  font-size: 38px;
+  font-size: 50px;
   color: #de3700;
   font-weight: bold;
   line-height: 40px;
@@ -182,7 +184,7 @@ div {
 .text-center {
   text-align: center;
 }
-.shadow {
+.statshadow {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 .overflow-hidden {
@@ -279,7 +281,90 @@ div {
   border-top: #ddd 1px solid;
 }
 
-.map > div {
-  left: -13%;
-  top: -20px;
+.map {
+  width: 100%;
 }
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
+
+
+/* Circle Live Dot CSS Start */
+.ring-container {
+  position: relative;
+    align-self: flex-start;
+    right: 3px;
+    bottom: 2px;
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  background-color: #de3700;
+  border-radius: 50%;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+
+.ringring {
+  border: 3px solid #de3700;
+  border-radius: 30px;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  animation: pulsate 1s ease-out;
+  animation-iteration-count: infinite; 
+  opacity: 0.0
+}
+@keyframes pulsate {
+  0% {transform: scale(0.1, 0.1); opacity: 0.0;}
+  50% {opacity: 1.0;}
+  100% {transform: scale(1.2, 1.2); opacity: 0.0;}
+}
+/* Circle Live Dot CSS End */
+
+.confirmed-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ring-container .live{
+  position: absolute;
+  left: 20px;
+  top: 2px;
+  color: #de3700;
+  font-size: 11px;
+}
+.footerItems{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar {
+  position: absolute;
+  padding: 5px 10px;
+  background-color: #444;
+  z-index: 999999;
+  height: 50px;
+  width: calc(100vw - 316px);
+  bottom: 0;
+  max-height: 50px;
+  margin-left: 316px;
+  color: #FFF;
+  opacity: 0.9;
+}
+.mapCircle {
+  animation: mapCirclePulse 1s ease-out;
+  animation-iteration-count: infinite; 
+  opacity: 0.4
+}
+@keyframes mapCirclePulse {
+  0% {opacity: 0.6;}
+  50% {opacity: 1.0;}
+  100% {opacity: 0.6;}
+}
+
+
