--- a/src/App.css
+++ b/src/App.css
@@ -177,6 +177,9 @@ div {
 .w-1\/3 {
   width: 33.333333%;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .text-yellow-600 {
   color: #eeb34e;
 }
@@ -219,6 +222,10 @@ div {
 }
 .text-xl {
   font-size: 1.25rem;
+}
+.text-xxl {
+  font-size: 2.4rem;
+  line-height: 2rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
