--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@ div {
   border-right: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 5px 3px 5px rgba(0, 0, 0, 0.05);
 }
+.desktop .infoTile {
+  width: 268px;
+}
 .country {
   z-index: 201;
   background-color: white;
@@ -39,14 +42,14 @@ div {
   padding-bottom: 5px;
   margin-bottom: 5px;
   white-space: pre;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   border-bottom: #ddd 1px solid;
 }
-
-.desktop .infoTile {
-  width: 268px;
+.pageName > a {
+  margin-right: 0.7rem;
 }
+
 .infoTile .title {
   color: #767676;
   font-weight: bold;
@@ -381,6 +384,9 @@ div {
   color: #fff;
   opacity: 0.9;
 }
+.navbar-nav {
+  flex: 1;
+}
 .mapCircle {
   animation: mapCirclePulse 1s ease-out;
   animation-iteration-count: infinite;
@@ -482,4 +488,62 @@ div {
 .change {
   position: relative;
   left: -3px;
+}
+
+/* Responsive CSS*/
+
+.mobile {
+  display: unset;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: #C8C8C8;
+  height: 100vh;
+}
+.mobile > .navbar {
+  display: none;
+}
+
+.mobile .bg-dark {
+ /* background-color: #343a4000!important; */
+}
+.mobile .map {
+  position: fixed;
+  width: 100%;
+}
+.mobile .tab {
+  width: 100%;
+  padding: 8px 16px 0 16px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px 10px 0px 0px;
+  box-sizing: border-box;
+  z-index: 100;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(5px);
+  min-height: 287px;
+  margin-top: 60vh;
+}
+.mobile .pullbar {
+  height: 5px;
+  width: 75px;
+  background-color: #C4C4C4;
+  border-radius: 100px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.navbar-toggler {
+  color: rgba(255,255,255,1);
+  border-color: rgba(0,0,0,0.2);
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255,255,255,1);
+  box-shadow: 0 1px 2px 2px rgba(0,0,0,.1);
+  padding: .2rem .4rem;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
