--- a/src/App.css
+++ b/src/App.css
@@ -489,6 +489,9 @@ div {
   position: relative;
   left: -3px;
 }
+.flickity-viewport {
+  transition: height 0.2s;
+}
 
 /* Responsive CSS*/
 
@@ -496,7 +499,7 @@ div {
   display: unset;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: #C8C8C8;
+  background-color: #c8c8c8;
   height: 100vh;
 }
 .mobile > .navbar {
@@ -523,7 +526,7 @@ div {
 .mobile .pullbar {
   height: 5px;
   width: 75px;
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   border-radius: 100px;
   position: relative;
   left: 50%;
@@ -531,14 +534,14 @@ div {
 }
 
 .navbar-toggler {
-  color: rgba(255,255,255,1);
-  border-color: rgba(0,0,0,0.2);
+  color: rgba(255, 255, 255, 1);
+  border-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 10px;
   right: 10px;
-  background-color: rgba(255,255,255,1);
-  box-shadow: 0 1px 2px 2px rgba(0,0,0,.1);
-  padding: .2rem .4rem;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 0.2rem 0.4rem;
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
