--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,105 @@
-* {
-  box-sizing: border-box;
+/* Bootstrap Needed Classes Start*/
+.navbar-nav {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.navbar-nav .nav-link {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.navbar-nav .dropdown-menu {
+  position: static;
+  float: none;
+}
+.nav-link {
+  display: block;
+  padding: 0.5rem 1rem;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  text-decoration: none;
+}
+
+.nav-link.disabled {
+  color: #6c757d;
+  pointer-events: none;
+  cursor: default;
+}
+.navbar-nav .nav-link {
+  padding-right: 0;
+  padding-left: 0;
+}
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
   padding: 0;
-  margin: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #fff;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+}
+.bg-dark {
+  background-color: #343a40 !important;
 }
 div {
   font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI",
     -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
+a {
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover {
+  color: #0056b3;
+  text-decoration: underline;
+}
+a:not([href]):not([tabindex]) {
+  color: inherit;
+  text-decoration: none;
+}
+a:not([href]):not([tabindex]):hover,
+a:not([href]):not([tabindex]):focus {
+  color: inherit;
+  text-decoration: none;
+}
+a:not([href]):not([tabindex]):focus {
+  outline: 0;
+}
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  content: "";
+  background: no-repeat center center;
+  background-size: 100% 100%;
+}
+
+/* Bootstrap Needed Classes End*/
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 .content {
   display: flex;
@@ -21,6 +115,7 @@ div {
   display: flex;
   flex-direction: column;
   width: 316px;
+  min-width: 316px;
   padding: 24px;
   box-sizing: border-box;
   border-right: 1px solid rgba(0, 0, 0, 0.1);
@@ -507,8 +602,49 @@ div {
 .flickity-viewport {
   transition: height 0.2s;
 }
-
-/* Responsive CSS*/
+.modalButtonsContainer {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1em;
+}
+.modalButtonsContainer .yes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #38a169;
+  border-color: #38a169;
+  color: #fff !important;
+  text-shadow: 0 -1px 1px rgba(0, 40, 50, 0.35);
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 10px 14px;
+  font-weight: 700;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modalButtonsContainer .no {
+  font-weight: 500;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+}
+.getnotifiedbutton {
+  color: rgba(255, 255, 255, 1);
+  border-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 0.4rem 0.56rem 0.25rem 0.56rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  border-radius: 0.3rem;
+  z-index: 999;
+}
+.notificationModalContent > p {
+  padding-top: 0.7em;
+}
+/* Mobile CSS*/
 
 .mobile {
   display: unset;
@@ -538,7 +674,7 @@ div {
   background-color: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(5px);
   min-height: 287px;
-  margin-top: 60vh;
+  margin-top: 59vh;
 }
 .mobile .pullbar {
   height: 5px;
@@ -560,7 +696,10 @@ div {
   right: 10px;
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
-  padding: 0.2rem 0.4rem;
+  padding: 0.3rem 0.4rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  border-radius: 0.3rem;
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -606,4 +745,16 @@ div {
   display: flex;
   justify-content: center;
   margin: 10px 0px;
+}
+.mobile .getnotifiedbutton {
+  color: rgba(255, 255, 255, 1);
+  border-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 60px;
+  right: 10px;
+  box-shadow: 0 1px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 0.4rem 0.56rem 0.25rem 0.56rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  border-radius: 0.3rem;
 }
