--- a/src/App.css
+++ b/src/App.css
@@ -759,3 +759,119 @@ a:not([href]):not([tabindex]):focus {
   border-radius: 0.3rem;
   z-index: 99;
 }
+/* Language Dropdown */
+
+.select-box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  margin: 0 auto;
+  font-family: "Open Sans", "Helvetica Neue", "Segoe UI", "Calibri", "Arial",
+    sans-serif;
+  font-size: 12px;
+  color: #000;
+}
+.select-box__current {
+  position: relative;
+  box-shadow: 0 1px 3px -5px rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  outline: none;
+}
+.select-box__current:focus + .select-box__list {
+  opacity: 1;
+  -webkit-animation-name: none;
+  animation-name: none;
+}
+.select-box__current:focus + .select-box__list .select-box__option {
+  cursor: pointer;
+}
+.select-box__current:focus .select-box__icon {
+  -webkit-transform: translateY(-50%) rotate(0deg);
+  transform: translateY(-50%) rotate(0deg);
+}
+.select-box__icon {
+  position: absolute;
+  top: 50%;
+  right: 7px;
+  transform: translateY(-50%) rotate(180deg);
+  width: 12px;
+  opacity: 0.3;
+  transition: 0.2s ease;
+}
+.select-box__value {
+  display: -webkit-box;
+  display: flex;
+}
+.select-box__input {
+  display: none;
+}
+.select-box__input:checked + .select-box__input-text {
+  display: block;
+}
+.select-box__input-text {
+  display: none;
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  background-color: #e2e8f0;
+  text-align: left;
+  padding-right: 2em;
+  border-radius: 0px 10px 0px 10px;
+}
+.select-box__list {
+  position: absolute;
+  bottom: 32px;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+  opacity: 0;
+  animation-name: HideList;
+  animation-duration: 0.5s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: step-start;
+  box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e2e8f0;
+  box-shadow: -1px -1px 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 10px 0px 0px 0px;
+}
+.select-box__option {
+  display: block;
+  padding: 5px;
+  background-color: #fff;
+}
+.select-box__option:hover,
+.select-box__option:focus {
+  color: #546c84;
+  background-color: #fbfbfb;
+}
+.select-box__list > li:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@-webkit-keyframes HideList {
+  from {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  to {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
+
+@keyframes HideList {
+  from {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  to {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
